# baruch-mth-9796

./: CORPORA.md  READING.md  README.md  TOOLS.md
nyt-expt-24/: README.md  nyt.py  test_nyt.py
nyt_expt_24/: 20240228_fine_tune_pretrained_model.ipynb  README.md  nyt.py  pyproject.toml  requirements.txt
nyt_expt_24/src/nyt_expt_24/: experiment.py
nyt_expt_24/tests/: test_nyt.py
nyt_expt_24/tests/data/nyt-archive-data/: fetch-2020-2.json  fetch-2020-3.json
nyt_expt_24/tests/data/yfinance/: spy.parquet
