[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "David Cuddihy", email = "tbd@example.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Companion code for the Baruch MFE MTH9796 Class."
name = "nyt_expt_24"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.3"
# dynamic = ["dependecies"]
# dependecies = {file = ["requirements.txt"]}
dependencies = [
  "datasets",
  "transformers[torch]",
  "tensorflow>=2.15",
  "evaluate",
  "yfinance",
  "requests",
]

[project.urls]
Homepage = "https://github.com/cuddihyd/baruch-mth-9796"
Issues = "https://github.com/cuddihyd/baruch-mth-9796/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
